# BMDS

./: .Rhistory  .clang-format  .dockerignore  .flake8  .gitignore  .readthedocs.yml  0608meeting.R  3dose.R  BCE.txt  CHANGELOG.md  CMAKE_README.md  CMakeLists.txt  DESCRIPTION  Hill_normal_e_4_sim_1.Rdata  Hill_normal_e_4_sim_2.Rdata  Hill_normal_e_4_sim_3.Rdata  Hill_normal_e_4_sim_4.Rdata  Hill_normal_e_4_sim_6.Rdata  Hill_normal_e_5_sim_1.Rdata  Hill_normal_e_5_sim_3.Rdata  Hill_normal_e_5_sim_7.Rdata  Hill_normal_g_4_sim_1.Rdata  Hill_normal_g_4_sim_2.Rdata  Hill_normal_g_4_sim_3.Rdata  Hill_normal_g_4_sim_5.Rdata  Hill_normal_g_4_sim_6.Rdata  Hill_normal_g_4_sim_8.Rdata  Hill_normal_g_5_sim_3.Rdata  Hill_normal_g_5_sim_6.Rdata  Hill_normal_g_5_sim_7.Rdata  Hill_normal_g_5_sim_8.Rdata  LICENSE  MANIFEST.in  Makefile  Makefile.am  NAMESPACE  PFOA_Liver_3doselevels.txt  README.md  SL_data_viz_test.R  StubForSimulations.R  (+50 more)
.github/workflows/: cpp-test.yml  deploy-docs.yml  dev-enviro.yml  main.yml  python-test-linux.yml  python-test-windows.yml  python-test.yml  test-linux.yml  test-macos.yml  test-windows.yml  wheels.yml
.gitlab/: .gitlab-ci.yml
BMDS/: .Rhistory  DESCRIPTION  NAMESPACE
BMDS/R/: RcppExports.R  continuous_plots.R  continuous_wrappers.R  dichotomous_wrappers.R  model_averaging_fits.R  model_averaging_lists.R  prior_classes.R  visualize_ma_continuous_YD.R
BMDS/src/: Makevars  Makevars.win  RcppExports.cpp  continuous_entry_code.cpp  main_entry.cpp  main_entry_ma.cpp  main_entry_mcmc.cpp
Documents CMA Paper/: Simulation Conditions.Rmd
John's Stuff/: .Rhistory  PFOA_Liver.txt  to john.R
MCMC test/: .Rhistory  con_hill_stan.stan  con_hill_stan_ncv.stan  run.R
R/: MAdensity_plot.R  RcppExports.R  cleveland_plot.R  continuous_wrappers.R  dichotomous_plots.R  dichotomous_wrappers.R  model_averaging_fits.R  predict.R  summary_continuous.R  summary_dichotomous.R  test_bmds.R
Simulation/: .Rhistory  Analyze_EXP_relD.R  Analyze_Exp_ivg.R  Analyze_HILL_ivg.R  Analyze_HILL_relD.R  Analyze_NP_2.0.R  Analyze_NP_ing.R  Analyze_NP_ivg.R  Analyze_NP_relD.R  crash_test.R  jerky2.R  out_exp-5.Rout  out_exp.Rout  out_hill.Rout  out_np.Rout  run_simulations.R  run_simulations_hill.R  run_simulations_only_hill_normal.R  run_simulations_relD.R  simulation_create.R  simulation_create_all_EXP-5.R  simulation_create_all_HILL.R  simulation_create_all_NP.R
Simulation/Exp-5/: .Rhistory  Exp-5_invGaussian_e_4_sim_1.Rdata  Exp-5_invGaussian_e_4_sim_2.Rdata  Exp-5_invGaussian_e_4_sim_3.Rdata  Exp-5_invGaussian_e_4_sim_4.Rdata  Exp-5_invGaussian_e_4_sim_5.Rdata  Exp-5_invGaussian_e_4_sim_6.Rdata  Exp-5_invGaussian_e_4_sim_7.Rdata  Exp-5_invGaussian_e_4_sim_8.Rdata  (+88 more)
ToXR-paper/: ._ToXR.tex  ToXR.aux  ToXR.tex
ToxicR/: .Rhistory  .gitignore  DESCRIPTION  NAMESPACE
ToxicR 2/: DESCRIPTION  INDEX  NAMESPACE
ToxicR.Rcheck/: 00install.out  ToxicR-Ex.R  ToxicR-Ex.Rout  ToxicR-Ex.timings
data_visualization/: BMD_density_plot.R  Cleveland_Plot.R
dll/: README.md
epa/: .gitlab-ci.yml  create_dll_compile.bash.template
src/: CMakeLists.txt  Makevars  Makevars.in  Makevars.ucrt  Makevars.win  RcppExports.cpp  main_entry.cpp
src/CATTexact/: CATTexact.R  CATTexact_python.ipynb
src/Jonckheere-Terpstra Trend Test/: Jonckheere.ipynb
src/bmdscore/: DichLogisticBMD_NC.cpp  DichProbitBMD_NC.cpp  DichQlinearBMD_NC.cpp  IDPrior.cpp  IDPriorMCMC.cpp  analysis_of_deviance.h  bmdStruct.h  bmds_helper.cpp  bmds_helper.h  continuous_clean_aux.cpp  continuous_entry_code.cpp  continuous_entry_code.h  dichotomous_entry_code.cpp  dichotomous_entry_code.h  framework.h  functional_generalized.cpp  functional_generalized.h  gradient.cpp  lognormalModels.cpp  lognormal_EXP_NC.cpp  lognormal_HILL_NC.cpp  lognormal_POLYNOMIAL_NC.cpp  lognormal_POWER_NC.cpp  normalModels.cpp  normal_EXP_NC.cpp  normal_FUNL_NC.cpp  normal_HILL_NC.cpp  normal_POLYNOMIAL_NC.cpp  normal_POWER_NC.cpp  normal_likelihoods.cpp  pch.h  stdafx.h  trend.cpp  trend.h
src/code_base/: DichGammaBMD_NC.cpp  analysis_of_deviance.cpp  bmds_helper.cpp  bmds_helper.h  continuous_entry_code.cpp  dichotomous_entry_code.cpp  helperfunctions.cpp  normal_EXP_NC.cpp  normal_HILL_NC.cpp  normal_POLYNOMIAL_NC.cpp  normal_POWER_NC.cpp  pch.h
src/include/: DichLogisticBMD_NC.h  DichProbitBMD_NC.h  DichQlinearBMD_NC.h  binomModels.h  bmd_calculate.h  bmds_entry.h  cBMDstatmod.h  cmodeldefs.h  dBMDstatmod.h  log_likelihoods.h  lognormalTests.h  mcmc_analysis.h  normal_EXP_NC.h  rbmds  statmod.h
src/include/old/: automobile  motorcycle.hpp
src/pybmds/: __init__.py  batch.py  bmdscore.pyi  constants.py  doubles.py  extra_nested_plots.py  plotting.py  session.py  utils.py  version.py  work.py
src/pybmds/cli/: priors_report.py
src/pybmds/datasets/: __init__.py  base.py  continuous.py  dichotomous.py  nested_dichotomous.py
src/pybmds/datasets/transforms/: rao_scott.py  raoscott.py
src/pybmds/models/: base.py  cma.py  continuous.py  dichotomous.py  multi_tumor.py  nested_dichotomous.py
src/pybmds/plotting/: __init__.py  common.py  constants.py  nested_dichotomous.py
src/pybmds/recommender/: __init__.py  recommender.py
src/pybmds/reporting/: styling.py
src/pybmds/stats/: JT.py  cochran_armitage.py  jonckheere.py  jt.py  normal.py
src/pybmds/types/: cma.py  common.py  continuous.py  dichotomous.py  ma.py  multi_tumor.py  nested_dichotomous.py  priors.csv  priors.py
src/pybmdscpp/: ex3.cpp  main.cpp  test1.cpp
src/scripts/: install-bmds-desktop.py
src/tests/: CMakeLists.txt
src/tests/src/: priors.h  test_cpp.cpp  test_cpp.h
src/unitTests/: integration_tests.cpp  integration_tests.h  priors.h  test_func.cpp  test_func.h  test_main.cpp  unit_tests.cpp  unit_tests.h
testScripts/: testCont.py  testDicho.py  testDichoMA.py  testMultitumor.py  testNested.py
tests/: test_bleep.py
tools/: ci_linux.sh  ci_setup.sh  cibuildwheel-linux.sh  cibuildwheel-mac.sh  cibuildwheel-windows.sh  cibw_setup.sh  linux_ci.sh  linux_ci_env.sh  linux_ci_setup.sh  mac-brew-nlopt-271.rb  nlopt.rb  trim-whitespace.sh  windows_ci.sh
(+1067 files in other folders)
