[project]
name = "pybmds"
license = {text = "MIT License"}
authors = [
  {name = "BMDS development team"},
  {name = "Andy Shapiro", email = "shapiro.andy@epa.gov"},
  {name = "Cody Simmons", email = "simmons.cody@epa.gov"},
]
readme = "README.md"
description = "U.S. EPA Dose Response Modeling Software"
dynamic = ["version"]
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.7",
  "numpy",
  "openpyxl",
  "pandas>=2",
  "pydantic>=2",
  "python-docx",
  "scipy",
  "tabulate",
  "tqdm",
]

[project.urls]
"Source" = "https://github.com/USEPA/BMDS"
"Changes" = "https://github.com/USEPA/BMDS/blob/main/docs/source/history.md"
"Issue Tracker" = "https://github.com/USEPA/BMDS/issues"
"Documentation" = "https://pypi.org/project/pybmds/"

[project.optional-dependencies]
dev = [
  "coverage~=7.6.4",
  "mypy~=1.13.0",
  "pybind11==2.13.6",
  "pytest-mpl~=0.17.0",
  "pytest~=8.3.3",
  "ruff~=0.7.1",
  "setuptools~=75.3.0",
  "wheel~=0.44.0",
]
docs = [
  "Sphinx~=8.1.3",
  "myst-nb~=1.1.2",
  "myst-parser~=4.0.0",
  "furo==2024.8.6",
  "sphinx_design~=0.6.1",
  "sphinx-autobuild~=2024.10.3",
]

[project.scripts]
"bmds-priors-report" = "pybmds.cli.priors_report:main"

[build-system]
requires = [
  "pybind11==2.13.6",
  "setuptools~=75.3.0",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
archs = ["auto64"]
build = ["cp311-*", "cp312-*", "cp313-*"]
skip = [
  "*-win32",
  "*-win_arm64",
  "*musllinux*",
  "*i686",
  "*-macosx_x86_64",
  "*-macosx_universal2",
]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
test-requires = ["pytest", "pytest-mpl"]
test-command = "pytest {project}/tests"

[tool.cibuildwheel.windows]
before-build = "bash tools/windows_ci.sh"

[tool.cibuildwheel.windows.environment]
EIGEN_DIR="D:/a/bmds/bmds/deps/eigen"
NLOPT_DIR="D:/a/bmds/bmds/deps/nlopt/src/api;D:/a/bmds/bmds/deps/nlopt/build/Release;D:/a/bmds/bmds/deps/nlopt/build"
GSL_DIR="D:/a/bmds/bmds/deps/gsl/build/Release;D:/a/bmds/bmds/deps/gsl/build"

[tool.cibuildwheel.linux]
before-build = "tools/cibuildwheel-linux.sh"

[tool.cibuildwheel.linux.environment]
EIGEN_DIR="/usr/include/eigen3"
NLOPT_DIR="/usr/local/lib64/"
CMAKE_C_COMPILER="/opt/rh/gcc-toolset-12/root/usr/bin/gcc"
CMAKE_CXX_COMPILER="/opt/rh/gcc-toolset-12/root/usr/bin/g++"

[tool.cibuildwheel.macos]
before-build = "tools/cibuildwheel-mac.sh"

[tool.cibuildwheel.macos.environment]
EIGEN_DIR="/opt/homebrew/Cellar/eigen/3.4.0_1/include/eigen3"
GSL_DIR="/opt/homebrew/Cellar/gsl/2.7.1"
NLOPT_DIR="/opt/homebrew/Cellar/nlopt/2.7.1/include"

[tool.coverage.report]
exclude_also = [
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
fail_under=96.7
precision=1

[tool.coverage.run]
include = [
  "src/pybmds/*"
]

[tool.pytest.ini_options]
testpaths = "tests/test_pybmds"
addopts = "--mpl-baseline-path=tests/data/mpl"
python_files = ["test_*.py"]

[tool.ruff]
exclude = ["docs"]
line-length = 100
lint.select = ["F", "E", "W", "I", "UP", "S", "B", "T20", "ERA", "NPY", "RUF", "PTH"]
lint.ignore = ["E501"]
lint.isort.known-first-party = ["pybmds"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101", "ERA001"]
"setup.py" = ["S603", "S607"]

[tool.setuptools.dynamic]
version = {attr = "pybmds.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pybmds*"]
