[metadata]
name = pybmds
description = A description of pybmds
long_description = file: README.md
author = BMDS development team
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.11

[options]
packages = pybmds
package_dir =
    = src
install_requires =
    typer

[options.entry_points]
console_scripts =
    pybmds = pybmds.cli:app

[flake8]
include =
    src/pybmds,
    tests/pybmds
max-line-length = 100
ignore = D100,D101,D102,D103,D104,D105,D200,N801,N802,N805,N806

[aliases]
test=pytest
