[metadata]
name = pybmds
description = A description of pybmds
long_description = file: README.md
author = BMDS development team
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.11

[options]
packages = pybmds
package_dir =
    = src
install_requires =
    typer

[options.entry_points]
console_scripts =
    pybmds = pybmds.cli:app
