cmake_minimum_required(VERSION 3.1)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

project(test_cpp)

set(CPP_BASE ../) 

IF(DEFINED ENV{EIGEN_INCLUDE_DIR})
  set(EIGEN_INCLUDE_DIR $ENV{EIGEN_INCLUDE_DIR})
ENDIF()
IF(DEFINED ENV{GSL_ROOT_DIR})
  set(GSL_ROOT_DIR $ENV{GSL_ROOT_DIR})
ENDIF()
IF(DEFINED ENV{NLOPT_LIB_DIR})
  set(NLOPT_LIB_DIR $ENV{NLOPT_LIB_DIR})
ENDIF()
IF(DEFINED ENV{CMAKE_C_COMPILER})
  set(CMAKE_C_COMPILER $ENV{CMAKE_C_COMPILER})
ENDIF()
IF(DEFINED ENV{CMAKE_CXX_COMPILER})
  set(CMAKE_CXX_COMPILER $ENV{CMAKE_CXX_COMPILER})
ENDIF()

#GSL 
find_package(GSL REQUIRED)

#NLOPT
find_library(NLOPT_LIB NAMES NLopt nlopt libnlopt  REQUIRED HINTS ${NLOPT_LIB_DIR})


#include_directories(${CPP_BASE}/build/Debug ${CPP_BASE}/include ${EIGEN_INCLUDE_DIR} ${GSL_INCLUDE_DIR} ${NLOPT_INCLUDE_DIR})
include_directories(${CPP_BASE}/tests/src ${CPP_BASE}/build ${CPP_BASE}/include ${CPP_BASE}/code_base ${EIGEN_INCLUDE_DIR} ${NLOPT_INCLUDE_DIR} ${GSL_INCLUDE_DIR})

#lib dirs
#link_directories(${GSL_LIB_DIR} ${NLOPT_LIB_DIR})
link_directories(${GSL_LIB_DIR} ${NLOPT_LIB_DIR})

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/../bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/../bin)

find_library(RBMDS_LIB RBMDS HINTS ${CPP_BASE}/build)

add_executable(test_cpp src/test_cpp.cpp)

target_link_libraries(test_cpp PRIVATE ${RBMDS_LIB} GSL::gsl GSL::gslcblas ${NLOPT_LIB})

file(COPY ${CPP_BASE}/build/libRBMDS.a DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG})
